For loop comparison with java and scala